tests/policies/disallow-latest-tag/bad.yaml
apiVersion: v1
kind: Pod
metadata:
  name: bad
spec:
  securityContext:
    runAsNonRoot: true
  containers:
    - name: app
      image: nginxinc/nginx-unprivileged:latest
      resources:
        requests: {cpu: 10m, memory: 32Mi}
        limits: {cpu: 100m, memory: 64Mi}
